force-app/main/default/objects/Side_Menu_Cmdt__mdt/Side_Menu_Cmdt__mdt.object-meta.xml
<CustomObject>
    <label>Side_Menu_Cmdt</label>
    <pluralLabel>Side_Menu_Cmdts</pluralLabel>
</CustomObject>