force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ListView</fullName>
                <default>true</default>
                <label>ListView</label>
            </value>
            <value>
                <fullName>New Create</fullName>
            </value>
            <value>
                <fullName>RecordPage</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>NavItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>