force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Action_Value__c.field-meta.xml
<CustomField>
    <fullName>Action_Value__c</fullName>
    <label>Action_Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>