force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Label_Key__c.field-meta.xml
<CustomField>
    <fullName>Label_Key__c</fullName>
    <label>Label_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>