force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Required_Custom_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Required_Custom_Permissions__c</fullName>
    <label>Required Custom Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>