force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort_Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>