force-app/main/default/objects/Side_Menu_Cmdt__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
                <default>true</default>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Khởi tạo cơ hội</fullName>
            </value>
            <value>
                <fullName>Thẩm định cơ hội</fullName>
            </value>
            <value>
                <fullName>Phê duyệt cơ hội</fullName>
            </value>
            <value>
                <fullName>Đánh giá tiếp nhận cơ hội</fullName>
            </value>
            <value>
                <fullName>Chuẩn bị Proposal/Báo giá &amp; CV</fullName>
            </value>
            <value>
                <fullName>Chờ khách hàng đánh giá</fullName>
            </value>
            <value>
                <fullName>Bảo lưu cơ hội</fullName>
            </value>
            <value>
                <fullName>Hủy cơ hội</fullName>
            </value>
            <value>
                <fullName>Kết thúc cơ hội</fullName>
            </value>
            <value>
                <fullName>Thống kê</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>